--- a/home.html
+++ b/home.html
@@ -259,11 +259,19 @@
               </div>
             </div>
             <div class="col-12  col-lg-7 text-center my-5 mt-lg-3 p-2 image-section">
-              <video class="img-fluid" muted autoplay loop>
+              <video class="img-fluid" muted autoplay loop style="border-radius: 10px;">
                 <source src="Images/Maghil-Intro-crop.mp4">
               </video>
             </div>
           </div>
+        </div>
+
+        <div class="banner-shadow-1"></div>
+        <div class="banner-shadow-2"></div>
+
+        <!-- Page-up -->
+        <div class="page-up">
+          <a href="#"><i class="fa-solid fa-angle-up"></i></a>
         </div>
 
       </div>
@@ -275,11 +283,11 @@
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
     <div class="features-wrapper">
       <div class="container">
-        <div class="features-outer-container py-5">
+        <div class="features-outer-container">
 
           <div class="section-title text-center pb-4">
             <h2 class="section-heading">Core Offerings</h2>
-            <h5 class="section-desc">Smart Solutions, Powerful Results</h5>
+            <h5 class="section-desc">Intelligent Strategies, Impactful Outcomes</h5>
           </div>
 
           <div class="row">
@@ -294,8 +302,11 @@
                     </div>
                   </div> 
                 </div>  
-                <div class="card-body text-center">
-                  <span>Dine-In Management</span>
+                <div class="card-body d-flex justify-content-center align-items-center">
+                  <a href="#">
+                    <span class="feature-name">Dine-In Management</span>
+                    <i class="fa-solid fa-arrow-right-long ms-2"></i>
+                  </a>
                 </div>   
               </div>
             </div>
@@ -311,8 +322,11 @@
                     </div>
                   </div> 
                 </div>     
-                <div class="card-body text-center">
-                  <span>Order Management</span>
+                <div class="card-body d-flex justify-content-center align-items-center">
+                  <a href="#">
+                    <span class="feature-name">Order Management</span>
+                    <i class="fa-solid fa-arrow-right-long ms-2"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -328,8 +342,11 @@
                     </div>
                   </div> 
                 </div>   
-                <div class="card-body text-center">
-                  <span>Menu Management</span>
+                <div class="card-body d-flex justify-content-center align-items-center">
+                  <a href="#">
+                    <span class="feature-name">Menu Management</span>
+                    <i class="fa-solid fa-arrow-right-long ms-2"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -345,8 +362,11 @@
                     </div>
                   </div> 
                 </div>     
-                <div class="card-body text-center">
-                  <span>Check In</span>
+                <div class="card-body d-flex justify-content-center align-items-center">
+                  <a href="#">
+                    <span class="feature-name">Check In</span>
+                    <i class="fa-solid fa-arrow-right-long ms-2"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -362,8 +382,11 @@
                     </div>
                   </div> 
                 </div>     
-                <div class="card-body text-center">
-                  <span>Time Management</span>
+                <div class="card-body d-flex justify-content-center align-items-center">
+                  <a href="#">
+                    <span class="feature-name">Time Management</span>
+                    <i class="fa-solid fa-arrow-right-long ms-2"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -379,8 +402,11 @@
                     </div>
                   </div> 
                 </div>     
-                <div class="card-body text-center">
-                  <span>Report Insights</span>
+                <div class="card-body d-flex justify-content-center align-items-center">
+                  <a href="#">
+                    <span class="feature-name">Report Insights</span>
+                    <i class="fa-solid fa-arrow-right-long ms-2"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -396,8 +422,11 @@
                     </div>
                   </div> 
                 </div>     
-                <div class="card-body text-center">
-                  <span>Kitchen Display System</span>
+                <div class="card-body d-flex justify-content-center align-items-center">
+                  <a href="#">
+                    <span class="feature-name">KDS</span>
+                    <i class="fa-solid fa-arrow-right-long ms-2"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -413,8 +442,11 @@
                     </div>
                   </div> 
                 </div>     
-                <div class="card-body text-center">
-                  <span>Cash Management</span>
+                <div class="card-body d-flex justify-content-center align-items-center">
+                  <a href="#">
+                    <span class="feature-name">Cash Management</span>
+                    <i class="fa-solid fa-arrow-right-long ms-2"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -423,9 +455,68 @@
         </div>
       </div>
     </div>
-
-
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+
+
+    <!-- Process -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="process-wrapper">
+      <div class="container">
+        <div class="process-container">
+
+          <div class="section-title text-center pb-3">
+            <h2 class="section-heading">Our Approach</h2>
+            <h5 class="section-desc">How We’ll Get It Done</h5>
+          </div>
+        
+          <picture class="d-none d-md-block">
+            <img src="Images/Process-Path-Horizontal.svg" alt="" class="process-image img-fluid">
+          </picture>
+
+          <picture class="d-block d-md-none">
+            <img src="Images/Process-Path-Vertical.svg" alt="" class="process-image img-fluid">
+          </picture>
+
+        </div>
+      </div>
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+
+
+    <!-- Industry -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="industry-wrapper">
+      <div class="container">
+        <div class="industry-container">
+
+          <div class="row">
+            <div class="col-12 col-sm-6 col-md-3">
+              <picture>
+                <img src="Images/Industries/Retail-1.jpg" alt="" class="img-fluid">
+              </picture>
+            </div>
+            <div class="col-12 col-sm-6 col-md-3">
+              <picture>
+                <img src="Images/Industries/Hospitality-1.jpg" alt="" class="img-fluid">
+              </picture>
+            </div>
+            <div class="col-12 col-sm-6 col-md-3">
+              <picture>
+                <img src="Images/Industries/Restaurant-1.jpg" alt="" class="img-fluid">
+              </picture>
+            </div>
+            <div class="col-12 col-sm-6 col-md-3">
+              <picture>
+                <img src="Images/Industries/Industry-1.jpg" alt="" class="img-fluid">
+              </picture>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+
 
   </body>
 </html>
