--- a/home.html
+++ b/home.html
@@ -489,27 +489,73 @@
       <div class="container">
         <div class="industry-container">
 
+          <div class="section-title text-center pb-4">
+            <h2 class="section-heading">Focused Verticals</h2>
+            <h5 class="section-desc">Focused Verticals</h5>
+          </div>
+
+
           <div class="row">
-            <div class="col-12 col-sm-6 col-md-3">
-              <picture>
-                <img src="Images/Industries/Retail-1.jpg" alt="" class="img-fluid">
-              </picture>
+            <!-- 1 -->
+            <div class="col-12 col-sm-6 col-lg-3">
+              <div class="card">
+                <picture>
+                  <img src="Images/Industries/Retail-1.jpg" alt="" class="img-fluid">
+                </picture>
+                <div class="card-body text-center">
+                  <div class="industry-content">
+                    <div class="industry-name">Retail</div>
+                    <div class="industry-desc">Empower grocery stores, food marts, and pharmacies with cutting-edge technology solutions for seamless operations and enhanced customer satisfaction.</div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3">
-              <picture>
-                <img src="Images/Industries/Hospitality-1.jpg" alt="" class="img-fluid">
-              </picture>
+           
+            <!-- 2 -->
+            <div class="col-12 col-sm-6 col-lg-3">
+              <div class="card">
+                <picture>
+                  <img src="Images/Industries/Hospitality-1.jpg" alt="" class="img-fluid">
+                </picture>
+                <div class="card-body text-center">
+                  <div class="industry-content">
+                    <div class="industry-name">Hospitality</div>
+                    <div class="industry-desc">Transform guest experiences with innovative tools designed for hotels, resorts, and event management, ensuring impeccable service delivery.</div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3">
-              <picture>
-                <img src="Images/Industries/Restaurant-1.jpg" alt="" class="img-fluid">
-              </picture>
+
+            <!-- 3 -->
+            <div class="col-12 col-sm-6 col-lg-3">
+              <div class="card">
+                <picture>
+                  <img src="Images/Industries/Restaurant-1.jpg" alt="" class="img-fluid">
+                </picture>
+                <div class="card-body text-center">
+                  <div class="industry-content">
+                    <div class="industry-name">Restaurant</div>
+                    <div class="industry-desc">Revolutionize restaurant management with smart solutions for streamlined operations, superior dining experiences, and efficient customer service.</div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3">
-              <picture>
-                <img src="Images/Industries/Industry-1.jpg" alt="" class="img-fluid">
-              </picture>
+
+            <!-- 4 -->
+            <div class="col-12 col-sm-6 col-lg-3">
+              <div class="card">
+                <picture>
+                  <img src="Images/Industries/Industry.jpg" alt="" class="img-fluid">
+                </picture>
+                <div class="card-body text-center">
+                  <div class="industry-content">
+                    <div class="industry-name">Industry</div>
+                    <div class="industry-desc">Drive innovation and productivity in manufacturing and industrial processes with tailored technology solutions for the modern era.</div>
+                  </div>
+                </div>
+              </div>
             </div>
+          
           </div>
 
         </div>
