--- a/home.html
+++ b/home.html
@@ -279,6 +279,56 @@
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 
+    <!-- brand-name -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="brand-wrapper">
+      <div class="container">
+        <div class="brand-container">
+
+          <div class="section-title text-center">
+            <h2 class="section-heading m-0">Brands already transforming with Maghil</h2>
+            <h5 class="section-desc"></h5>
+          </div>
+
+          <div class="logos">
+            <div class="logos-slide">
+              <img src="Images/Brand_Name/A2B.png" alt="A2B Logo" />
+              <img src="Images/Brand_Name/Akshayam.png" alt="Akshayam Logo" />
+              <img src="Images/Brand_Name/Appams.png" alt="Appams Logo" />
+              <img src="Images/Brand_Name/BigUp.png" alt="Bigup Logo" />
+              <img src="Images/Brand_Name/Bonum_Cibum.png" alt="Bonum Logo" />
+              <img src="Images/Brand_Name/TN59.png" alt="Cafe 59 Logo" />
+              <img src="Images/Brand_Name/CakeSquare.png" alt="Cafe Square Logo" />
+              <img src="Images/Brand_Name/Minvera.png" alt="Cafe Square Logo" />
+
+              <!-- set - 2 -->
+              <img src="Images/Brand_Name/A2B.png" alt="A2B Logo" />
+              <img src="Images/Brand_Name/Akshayam.png" alt="Akshayam Logo" />
+              <img src="Images/Brand_Name/Appams.png" alt="Appams Logo" />
+              <img src="Images/Brand_Name/BigUp.png" alt="Bigup Logo" />
+              <img src="Images/Brand_Name/Bonum_Cibum.png" alt="Bonum Logo" />
+              <img src="Images/Brand_Name/TN59.png" alt="Cafe 59 Logo" />
+              <img src="Images/Brand_Name/CakeSquare.png" alt="Cafe Square Logo" />
+              <img src="Images/Brand_Name/Minvera.png" alt="Cafe Square Logo" />
+
+              <!-- set - 3 -->
+              <img src="Images/Brand_Name/A2B.png" alt="A2B Logo" />
+              <img src="Images/Brand_Name/Akshayam.png" alt="Akshayam Logo" />
+              <img src="Images/Brand_Name/Appams.png" alt="Appams Logo" />
+              <img src="Images/Brand_Name/BigUp.png" alt="Bigup Logo" />
+              <img src="Images/Brand_Name/Bonum_Cibum.png" alt="Bonum Logo" />
+              <img src="Images/Brand_Name/TN59.png" alt="Cafe 59 Logo" />
+              <img src="Images/Brand_Name/CakeSquare.png" alt="Cafe Square Logo" />
+              <img src="Images/Brand_Name/Minvera.png" alt="Cafe Square Logo" />
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+
+
     <!-- Achievements -->
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
     <div class="Achievement-wrapper">
@@ -325,6 +375,9 @@
                     <h6 class="achievement-content">Processing Errors</h6>
                   </div>
                 </div>
+
+                <div class="banner-shadow"></div>
+
               </div>
             </div>
 
@@ -552,7 +605,6 @@
         <div class="industry-container">
 
           <div class="section-title text-center pb-4">
-            <!-- Focused Verticals -->
             <h2 class="section-heading">Key Verticals</h2>
             <h5 class="section-desc">Customized solutions for every industry.</h5>
           </div>
@@ -635,8 +687,7 @@
       <div class="container">
         <div class="solution-container">
 
-          <div class="section-title text-center pb-4">
-            <!-- Focused Verticals -->
+          <div class="section-title text-center pb-3">
             <h2 class="section-heading m-0">Smart strategies for sustainable success.</h2>
             <h5 class="section-desc"></h5>
           </div>
@@ -649,24 +700,25 @@
             </div>
 
             <!-- content -->
-            <div class="col-12 col-lg-7 content-section">
+            <div class="col-12 col-lg-7 content-section mt-3">
+
               <div class="content-heading m-0 text-center text-sm-start">
-                <h2 class="mb-2">Revolutionizing Retail with POS Solutions</h2>
-                <p class="mb-3">Streamlined solutions designed to empower businesses of all sizes with cutting-edge POS systems, hardware, and integrations.</p>
+                <h2 class="mb-2 heading">Revolutionizing Retail with POS Solutions</h2>
+                <p class="mb-3 desc">Streamlined solutions designed to empower businesses of all sizes with cutting-edge POS systems, hardware, and integrations.</p>
               </div>
 
               <!-- 1 -->
               <a href="#">
-                <div class="solution-card d-flex align-items-start mb-1">
+                <div class="solution-card d-flex align-items-start mb-2 mb-lg-1">
                   <h2 class="solution-icon mt-1 me-5">01</h2>
                   <div class="solution-content ms-1">
                     <h3 class="solution-title d-flex align-items-center">
-                      <span class="me-4">POS Systems</span>
+                      <span class="me-4 solution-type">POS Systems</span>
                       <i class="fa-solid fa-arrow-right"></i>
                     </h3>
                     <div class="solution-text">
-                      <span><i class="fa-solid fa-circle-check me-2"></i>Cloud-Based POS: Accessible anywhere, anytime for seamless management.</span><br>
-                      <span><i class="fa-solid fa-circle-check me-2"></i>Mobile POS: Perfect for on-the-go sales and mobility.</span>
+                      <span class="solutions"><i class="fa-solid fa-circle-check me-2"></i><span style="font-weight: bold;">Cloud-Based POS :</span> Accessible anywhere, anytime for seamless management.</span><br>
+                      <span class="solutions"><i class="fa-solid fa-circle-check me-2"></i><span style="font-weight: bold;">Mobile POS:</span> Perfect for on-the-go sales and mobility.</span>
                     </div>
                   </div>
                 </div>
@@ -674,17 +726,17 @@
 
               <!-- 2 -->
               <a href="#">
-                <div class="solution-card d-flex align-items-start mb-1">
+                <div class="solution-card d-flex align-items-start mb-2 mb-lg-1">
                   <h2 class="solution-icon mt-1 me-5">02</h2>
                   <div class="solution-content">
                     <h3 class="solution-title d-flex align-items-center">
-                      <span class="me-4">Hardware and Accessories</span>
+                      <span class="me-4 solution-type">Hardware and Accessories</span>
                       <i class="fa-solid fa-arrow-right"></i>
                     </h3>
                     <div class="solution-text">
-                      <span><i class="fa-solid fa-circle-check me-2"></i>State-of-the-Art Hardware: Ensure durability and reliability for daily use.</span><br>
-                      <span><i class="fa-solid fa-circle-check me-2"></i>Software Customization: Tailored to meet specific business needs.</span><br>
-                      <span><i class="fa-solid fa-circle-check me-2"></i>Accessories: Everything you need, from scanners to receipt printers.</span>
+                      <span class="solutions"><i class="fa-solid fa-circle-check me-2"></i><span style="font-weight: bold;">State-of-the-Art Hardware:</span> Ensure durability and reliability for daily use.</span><br>
+                      <span class="solutions"><i class="fa-solid fa-circle-check me-2"></i><span style="font-weight: bold;">Software Customization:</span> Tailored to meet specific business needs.</span><br>
+                      <span class="solutions"><i class="fa-solid fa-circle-check me-2"></i><span style="font-weight: bold;">Accessories:</span> Everything you need, from scanners to receipt printers.</span>
                     </div>
                   </div>
                 </div>
@@ -692,20 +744,22 @@
 
               <!-- 3 -->
               <a href="#">
-                <div class="solution-card d-flex align-items-start mb-1">
+                <div class="solution-card d-flex align-items-start mb-2 mb-lg-1">
                   <h2 class="solution-icon mt-1 me-5">03</h2>
                   <div class="solution-content">
                     <h3 class="solution-title d-flex align-items-center">
-                      <span class="me-4">Advanced Integrations</span>
+                      <span class="me-4 solution-type">Advanced Integrations</span>
                       <i class="fa-solid fa-arrow-right"></i>
                     </h3>
                     <div class="solution-text">
-                      <span><i class="fa-solid fa-circle-check me-2"></i>Multi-Store Management: Effortlessly oversee multiple stores from a single dashboard.</span><br>
-                      <span><i class="fa-solid fa-circle-check me-2"></i>eCommerce Integration: Blend online and offline sales seamlessly for unified business management.</span>
+                      <span class="solutions"><i class="fa-solid fa-circle-check me-2"></i><span style="font-weight: bold;">Multi-Store Management:</span> Effortlessly oversee multiple stores from a single dashboard.</span><br>
+                      <span class="solutions"><i class="fa-solid fa-circle-check me-2"></i><span style="font-weight: bold;">eCommerce Integration:</span> Blend online and offline sales seamlessly for unified business management.</span>
                     </div>
                   </div>
                 </div>
               </a>
+
+              <div class="banner-shadow"></div>
 
             </div>
 
@@ -717,6 +771,70 @@
       </div>
     </div>
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+
+
+    <!-- Testimonial -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="Testimonial-wrapper">
+      <div class="container">
+        <div class="Testimonial-container text-center">
+
+          <div class="section-title text-center pb-3">
+            <h2 class="section-heading">What Our Customers Say</h2>
+            <h5 class="section-desc">Celebrating Milestones Through Your Words</h5>
+          </div>
+
+          <div class="row">
+            <!-- 1 -->
+            <div class="col-12 col-md-6 mt-4">
+              <div class="testimonial-card">
+                <div class="d-flex align-items-center">
+                  <!-- <img src="https://via.placeholder.com/60" alt="User Image"> -->
+                  <div class="testimonial-image"></div>
+                  <div class="testimonial-name-stars">
+                    <h5 class="name">M S Dhoni</h5>
+                    <p class="stars">★★★★★</p>
+                  </div>
+                </div>
+                <div class="quote-icon text-start ms-2 mt-2">
+                  <i class="fa fa-quote-right"></i>
+                </div>
+                <div class="testimonial-body text-start ms-2 mt-1">
+                  The analytics features are outstanding! I now have a clear view of my sales trends and customer preferences. Highly recommend it for small businesses.
+                </div>
+              </div>
+            </div>
+
+            <!-- 2 -->
+            <div class="col-12 col-md-6 mt-4">
+              <div class="testimonial-card">
+                <div class="d-flex align-items-center">
+                  <!-- <img src="https://via.placeholder.com/60" alt="User Image"> -->
+                  <div class="testimonial-image"></div>
+                  <div class="testimonial-name-stars">
+                    <h5 class="name">Virat Kolhi</h5>
+                    <p class="stars">★★★★</p>
+                  </div>
+                </div>
+                <div class="quote-icon text-start ms-2 mt-2">
+                  <i class="fa fa-quote-right"></i>
+                </div>
+                <div class="testimonial-body text-start ms-2 mt-1">
+                  I love how this POS integrates with our online store. It keeps everything in sync and ensures we never oversell or run out of stock.
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+
+      
+    
+
 
   </body>
 </html>
